--- a/lab5/client/package.json
+++ b/lab5/client/package.json
@@ -12,7 +12,8 @@
 		"react-dom": "^16.13.1",
 		"react-modal": "^3.11.2",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "^4.0.3"
+		"react-scripts": "^4.0.3",
+		"@material-ui/core": "^4.10.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
